@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.593 2006/02/10 23:37:31 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.594 2006/02/11 17:26:33 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
+
+  11 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIPortage.py:
+  run env-update at the end of copy_pkg_to_chroot()
 
   10 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/templates/x86ArchitectureTemplate.py:
